feat: add unattended updates configuration
Add support for unattended package upgrades in the SDR station setup playbook. This includes installing the unattended-upgrades package and configuring automatic updates for package lists, unattended upgrades, and autoclean intervals. Updated README to reflect the new feature and adjusted the playbook command to include --ask-become-pass for proper execution.

--- a/basic-setup.yaml
+++ b/basic-setup.yaml
@@ -65,3 +65,23 @@
       service:
         name: chronyd
         state: restarted
+        
+- name: Install Unattended Updates
+  hosts: sdr-station
+  gather_facts: yes
+  tasks:
+    - name: Install unattended-upgrades package
+      apt:
+        pkg: unattended-upgrades
+        state: present
+        update_cache: yes
+    - name: Configure unattended upgrades
+      lineinfile:
+        path: /etc/apt/apt.conf.d/20auto-upgrades
+        line: "{{ item }}"
+        state: present
+        create: yes
+      loop:
+        - 'APT::Periodic::Update-Package-Lists "1";'
+        - 'APT::Periodic::Unattended-Upgrade "1";'
+        - 'APT::Periodic::AutocleanInterval "7";'
