feat(sdr): add rtl-sdr installation tasks
Add Ansible tasks to install rtl-sdr from source, including dependency installation, repository cloning, building Debian packages, and cleanup. This enables automated setup of rtl-sdr for SDR operations.

--- a/playbook.yaml
+++ b/playbook.yaml
@@ -21,6 +21,9 @@
         reboot_timeout: 600
       when: reboot_required.stat.exists
 
+    - name: Import rtl-sdr installation tasks
+      import_tasks: rtl-sdr-install.yaml
+
     - name: Create user sdr-system if not exists
       user:
         name: sdr-system
