feat(sdr): add SDR++ server service and rtl-sdr udev rules
- Add systemd service to run SDR++ as a server with auto-restart
- Install and reload udev rules for rtl-sdr device permissions

This enhances the SDR station setup by enabling SDR++ to run as a background service and ensuring proper access to rtl-sdr devices via udev rules.

--- a/playbook.yaml
+++ b/playbook.yaml
@@ -60,3 +60,29 @@
       apt:
         deb: /home/sdr-system/sdrpp_debian_trixie_aarch64.deb
       become: yes
+
+    - name: Create systemd service file for SDR++ server
+      copy:
+        dest: /etc/systemd/system/sdrpp-server.service
+        content: |
+          [Unit]
+          Description=SDR++ Server
+          After=network.target
+
+          [Service]
+          Type=simple
+          User=root
+          ExecStart=/usr/bin/sdrpp --server
+          Restart=always
+          RestartSec=5
+
+          [Install]
+          WantedBy=multi-user.target
+      become: yes
+
+    - name: Enable and start SDR++ server service
+      systemd:
+        name: sdrpp-server
+        enabled: yes
+        state: started
+      become: yes
